<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.Diamond"
    android:id="@+id/drawerlayout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    android:backgroundTint="#80FFFFFF"
    android:backgroundTintMode="src_over">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/navigationview"
        app:headerLayout="@layout/headerfile"
        app:menu="@menu/sidemenu"
        android:layout_gravity="start"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleY="2.9"
                android:src="@drawable/back"
                app:layout_constraintTop_toTopOf="parent"
                android:alpha="0.4" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar1"
                android:layout_width="411dp"
                android:layout_height="70dp"
                android:background="#009688"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="115dp"
                android:layout_marginTop="13dp"
                android:fontFamily="times"
                android:text="@string/txt8"
                android:textColor="@color/white"
                android:textSize="31sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/float1"
                android:layout_width="59dp"
                android:layout_height="55dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="7dp"
                android:clickable="true"
                android:contentDescription="@string/float1"
                android:focusable="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:backgroundTint="#009688"
                android:src="@drawable/ic_baseline_menu_24"
                app:shapeAppearanceOverlay="@style/shape"
                tools:ignore="SpeakableTextPresentCheck" />

            <LinearLayout
                android:layout_width="409dp"
                android:layout_height="659dp"
                android:layout_marginTop="68dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="12dp"
                    app:cardUseCompatPadding="true">

                    <ViewFlipper
                        android:layout_width="match_parent"
                        android:layout_height="196dp"
                        android:id="@+id/v_flipper"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/txt9"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:text="@string/txt19"
                    android:textSize="50dp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-black"
                    android:paddingLeft="40dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="95dp"
                        android:layout_height="50dp"
                        app:srcCompat="@android:drawable/btn_star_big_on"
                        android:paddingLeft="16dp"/>

                    <TextView
                        android:id="@+id/txt10"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/txt10"
                        android:textStyle="bold"
                        android:textSize="40dp" />

                </LinearLayout>

                <TableRow
                    android:id="@+id/hr"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#444"
                    android:layout_marginTop="9dp"/>

                <TextView
                    android:id="@+id/txt11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt11"
                    android:textSize="35dp"
                    android:paddingLeft="40dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txt12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt12"
                    android:textSize="25dp"
                    style="@style/CardView.Dark"
                    android:paddingLeft="35dp"/>

                <TextView
                    android:id="@+id/txt13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt13"
                    android:textSize="25dp"
                    style="@style/CardView.Dark"
                    android:paddingLeft="35dp"/>

                <TableRow
                    android:id="@+id/hr1"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#444"
                    android:layout_marginTop="9dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="250dp"
                        android:layout_height="match_parent"
                        android:text="@string/txt14"
                        android:textSize="35dp"
                        android:paddingLeft="40dp"
                        android:paddingTop="25dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/txt20"
                        android:textSize="35dp"
                        android:paddingLeft="40dp"
                        android:paddingTop="25dp"
                        android:textStyle="bold"/>

                </LinearLayout>

                <Button
                    android:id="@+id/btn1"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/rounded_corner"
                    android:backgroundTint="#009688"
                    android:text="@string/btn1"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="50dp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.drawerlayout.widget.DrawerLayout>