<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#86BC88"
    tools:context=".activity.Packages"
    android:id="@+id/drawerlayout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/navigationview"
        app:headerLayout="@layout/headerfile"
        app:menu="@menu/sidemenu"
        android:layout_gravity="start"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleY="2.9"
                android:src="@drawable/back"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar1"
                android:layout_width="411dp"
                android:layout_height="70dp"
                android:background="#009688"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="115dp"
                android:layout_marginTop="13dp"
                android:fontFamily="times"
                android:text="@string/txt1"
                android:textColor="@color/white"
                android:textSize="31sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/float1"
                android:layout_width="59dp"
                android:layout_height="55dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="7dp"
                android:clickable="true"
                android:contentDescription="@string/float1"
                android:focusable="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:backgroundTint="#009688"
                android:src="@drawable/ic_baseline_menu_24"
                app:shapeAppearanceOverlay="@style/shape"
                tools:ignore="SpeakableTextPresentCheck" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/imgBtn1"
                            android:layout_width="match_parent"
                            android:layout_height="168dp"
                            android:contentDescription="@string/imgbtn1"
                            android:scaleType="fitXY"
                            android:src="@drawable/silver"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="SpeakableTextPresentCheck" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="58dp"
                            android:background="#C1009688"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/txt2"
                                android:layout_width="205dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:fontFamily="sans-serif-condensed-medium"
                                android:paddingLeft="30dp"
                                android:text="@string/txt2"
                                android:textSize="37sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/txt3"
                                android:layout_width="205dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:fontFamily="sans-serif-condensed-medium"
                                android:paddingLeft="120dp"
                                android:text="@string/txt3"
                                android:textSize="37sp"
                                android:textStyle="bold" />
                        </LinearLayout></LinearLayout></androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/imgBtn2"
                            android:layout_width="match_parent"
                            android:layout_height="168dp"
                            android:contentDescription=""
                            android:scaleType="fitXY"
                            android:src="@drawable/r1"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="SpeakableTextPresentCheck" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="58dp"
                            android:background="#C1009688"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/txt4"
                                android:layout_width="205dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/cardview_default_radius"
                                android:fontFamily="sans-serif-condensed-medium"
                                android:paddingLeft="30dp"
                                android:text="@string/txt4"
                                android:textSize="37sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/txt5"
                                android:layout_width="205dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/cardview_default_radius"
                                android:fontFamily="sans-serif-condensed-medium"
                                android:paddingLeft="120dp"
                                android:text="@string/txt5"
                                android:textSize="37sp"
                                android:textStyle="bold" />
                        </LinearLayout></LinearLayout></androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/imgBtn3"
                            android:layout_width="match_parent"
                            android:layout_height="168dp"
                            android:contentDescription="@string/imgBtn3"
                            android:scaleType="fitXY"
                            android:src="@drawable/diamond"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="SpeakableTextPresentCheck" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="58dp"
                            android:background="#C1009688"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/txt6"
                                android:layout_width="205dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/cardview_default_radius"
                                android:fontFamily="sans-serif-condensed-medium"
                                android:paddingLeft="30dp"
                                android:text="@string/txt6"
                                android:textSize="37sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/txt7"
                                android:layout_width="205dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/cardview_default_radius"
                                android:fontFamily="sans-serif-condensed-medium"
                                android:paddingLeft="120dp"
                                android:text="@string/txt7"
                                android:textSize="37sp"
                                android:textStyle="bold" />
                        </LinearLayout></LinearLayout></androidx.cardview.widget.CardView>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.drawerlayout.widget.DrawerLayout>